--- a/main.css
+++ b/main.css
@@ -202,7 +202,19 @@ img {
     border-radius: 50%;
     width: 15%;
     height: auto;
-    opacity: 0.7;
+    opacity: 0.8;
+}
+/* img#card {
+  border-radius: 50%;
+  width: 50%;
+  float: center !important;
+  height: auto;
+  opacity: 1;
+} */
+
+.recipe-front {
+  float: center;
+  vertical-align: center;
 }
 
 .neon_text {
